# messenger

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_QUALITY_GUIDELINES.md  DOCUMENTATION.md  DOCUMENTATION_FULL.md  ENHANCED_DOCUMENTATION.md  LICENSE  MICROSERVICE_ARCHITECTURE_PLAN.md  README.md  RUNNING_INSTRUCTIONS.md  SECURITY.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci-cd-enhanced.yml
cashing/: cache_config.py
client-qt/: CMakeLists.txt  Dockerfile
client-qt/resources/: resources.qrc
client-qt/resources/emojis/: README.md
client-qt/resources/icons/: README.md
client-qt/resources/stickers/: README.md
client-qt/resources/styles/: modern-dark.qss  modern-light.qss
client-qt/src/: enhanced_ui_features.cpp  enhanced_ui_features.h  main.cpp  mainwindow.cpp  mainwindow.h  messagelistmodel.cpp  messagelistmodel.h  settings.cpp  settings.h  theme_manager.cpp  theme_manager.h
client-qt/ui/: mainwindow.ui  mainwindow_modern.ui
client-themes/: theme-switcher.js  themes.css
db_optimization/: optimization_config.sql
grafana/provisioning/: datasources.yaml
grpc_services/proto/: service.proto
kong/: kong.yml
mobile_client/: BUILD_ANDROID.md  README.md  build_apk.sh  pubspec.yaml
nginx/: nginx.conf
prometheus/: prometheus.yml
rabbitmq/: rabbitmq.conf
scripts/: run_code_quality.sh  start-messenger.sh
scripts/analysis/: format_code.py  run_analysis.py
server/: Dockerfile  Dockerfile.quality  pytest.ini  requirements-quality.txt  requirements.txt
traefik/: config.yml  traefik.yml
(+83 files in other folders)
